Version 0.2.2~dev

	* Make path of ffmpeg's binary configurable, refs: #1847.

Version 0.2.1 Released on 2009/04/09

	* Load pre/post commands in sequence, starting at 1, refs: #1810.

Version 0.2.0 Released on 2009/03/20

	* Handle pre/post command, closes: #1641.
	* Do not die if pid file exists but refers to an non-existing process.

Version 0.1.0 Released on 2009/03/20

	* Initial work, closes: #1514.